--- a/starwars/src/index.scss
+++ b/starwars/src/index.scss
@@ -5,3 +5,10 @@ body {
   background-image: url('./sw-bg.jpg');
   background-size: cover;
 }
+.characters{
+
+h4{
+
+  text-shadow: 2px 2px white;
+}
+}
